base/ing-echo-demo.yaml
# echo-demo Ingress Rule
apiVersion: networking.k8s.io/v1
kind: Ingress                       
metadata:
  name: hub-ing-echo-demo 
  namespace: ns-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:       
  ingressClassName: nginx                    
  rules:
  - host: "hub-echo-demo.atlantis.mini.cloud"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend: 
          service:
            name: hub-svc-echo-demo
            port: 
              number: 8080
